# epic-lfhcal-tbana

./: .gitignore  README.md  prepareAnalysisDirectory.sh
NewStructure/: Analyse.cc  Analyses.cc  Analyses.h  CMakeLists.txt  CMakePresets.json  Calib.cc  Calib.h  CalibSummary.cc  CalibSummary.h  CommonHelperFunctions.h  Compare.cc  ComparisonCalib.cc  ComparisonCalib.h  Convert.cc  CreateMapping.C  DataAna.cc  DataAnalysis.cc  DataAnalysis.h  DataPrep.cc  Display.cc  Event.cc  Event.h  EventDisplay.cc  EventDisplay.h  HGCROC.cc  HGCROC.h  HGCROC_Convert.cc  HGCROC_Convert.h  LinkDef.h  Makefile  PlottHelper.h  Setup.cc  Setup.h  TileSpectra.cc  TileSpectra.h  TileTrend.cc  TileTrend.h  applyCalibration_2024.sh  build.sh  convertData_2024.sh  (+7 more)
NewStructure/include/h2g_decode/: debug_logger.h  event_aligner.h  file_stream.h  hgc_decoder.h  line_builder.h  stat_logger.h  tree_writer.h  waveform_builder.h
NewStructure/waveform_fitting/: crystal_ball_fit.cc  crystal_ball_fit.h  max_sample_fit.cc  max_sample_fit.h  waveform_fit_base.cc  waveform_fit_base.h
configs/: DataTakingDB_202409_CAEN.csv  DataTakingDB_ORNL_Cosmics.txt  DataTakingDB_TBOct2023_PST09-20231011.csv  DataTakingDB_TBOct2023_PST09-20231012.csv  DataTakingDB_TBOct2023_PST09-20231016.csv  DataTakingDB_TBSept2023_SPSH4.csv  KCUordering_20240831_12pm.txt  KCUordering_20240901_12pm.txt  badChannelMap_TBSetup_CAEN_202408.txt  layersHGCROC_PSTB_Til_01082024_12pm.txt  layersHGCROC_PSTB_Til_31082024_1pm-01092024_.txt  layersHGCROC_PSTB_Til_31082024_1pm.txt  mappingFile_202409_CAEN.txt  mappingFile_Cosmics_CAEN.txt  mappingSingleHGCROCAsic.txt  mapping_HGCROC_PSTB_Til_31082024_1pm.txt.txt
